Fixed font spacing, added load from JSON for dynamic text

--- a/killboard.css
+++ b/killboard.css
@@ -1,18 +1,3 @@
-table#table-frame {
-  background-color: rgb(205, 85, 69);
-}
-
-table#table-chalkboard {
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 18pt;
-  color: rgb(218, 218, 218);
-  border: 20px solid;
-  border-image-source: url("images/chalkboard-blank.png");
-  border-image-slice: 18 17 39 17 fill;
-  border-image-width: auto;
-  border-image-repeat: round;
-  padding-bottom: 14px;
-}
 div#div-chalkboard {
   border: 20px solid;
   border-image-source: url("images/chalkboard-blank.png");
@@ -20,7 +5,4 @@ div#div-chalkboard {
   border-image-width: auto;
   border-image-repeat: round;
   width: max-content;
-}
-th {
-  font-weight: normal;
 }
